Fix mdTabs overflowing to the right

--- a/src/yunity/style/global.scss
+++ b/src/yunity/style/global.scss
@@ -17,7 +17,10 @@ $layout-wide:   $layout-breakpoint-md;
 }
 
 // Tabs with dynamic height should show all content.
-md-tabs.md-dynamic-height { overflow: visible; }
+md-tabs.md-dynamic-height {
+  overflow-x: hidden;
+  overflow-y: visible;
+}
 
 // Simply use text color for icons.
 md-icon { color: unset; }
